clarification for free access

--- a/_posts/2019-07-24-hack.lu-2019-jobfair.md
+++ b/_posts/2019-07-24-hack.lu-2019-jobfair.md
@@ -23,7 +23,7 @@ it attracts a lot of highly technical attendees and some of them are looking for
 This is why we decided to give the opportunity to companies looking for such profiles to get in touch with them
 during the conference.
 
-The job fair will take place the 22nd of October, from 16:00 until 19:00, in the hotel of the conference.
+The job fair will take place the 22nd of October, from 16:00 until 19:00, in the hotel of the conference, Parc Hotel in Luxembourg (Dommeldange). It is open for all candidates for free, only the [registration is required](https://www.jobfair.eden-forums.fr). 
 
 Sponsors of the Cybersecurity Week Luxembourg and hack.lu have the opportunity to participate in the fair with a stand for free,
 (within the limit of places available). If you want one, please get in touch as soon as possile.
